--- a/wk1 - Feature preprocessing and generation with respect to models.ipynb
+++ b/wk1 - Feature preprocessing and generation with respect to models.ipynb
@@ -918,6 +918,18 @@
     "       \n",
     "    2. 하기전에 먼저 na를 채우지 말자. 분포에 영향을 준다."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 연습문제 피드백\n",
+    "\n",
+    "1. GBDT 모델을 categorical feature를 가진 data에 쓰려고한다. 어떤 encoding이 좋을까?\n",
+    "\n",
+    "    - label encoding이 computation은 더 효과적이지만, quality 가 더 높다고 확신할 순 없다\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
