--- a/wk2 - Validation.ipynb
+++ b/wk2 - Validation.ipynb
@@ -165,6 +165,78 @@
     "\n",
     "**validation split 을 잘못하면 예측값 자체에 안 좋은 영향을 줄 수 있다**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### split strategies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Random, rowwise\n",
+    "\n",
+    "    - 가장 흔한 방법, 각 row가 독립일 때\\\n",
+    "        예를 들면, 이 사람이 돈을 갚을지 안 갚을지 예측하는데 각 row가 사람 하나하나를 칭하는 것.\n",
+    "        독립이 아닌 경우는? 그 사람 중 가족이 있거나, 직장동료가 있거나.\n",
+    "\n",
+    "- Timewise\n",
+    "\n",
+    "    - 앞에서 봣듯이, 특정 시점 전의 training 데이터. \n",
+    "    - 매우 좋은 feature를 만들 수 있음. 전주 동일 요일의 target값, 지난달의 target 평균 등등.\n",
+    "    - train/test split의 기준일을 옮겨가면서 하는 것이 moving window validation -> 기존에 내가 알던 timeseries split\n",
+    "\n",
+    "- By id\n",
+    "\n",
+    "    - 개인에게 음악을 추천해주는 문제라고 하자. train/test에는 같은 사람이 하나도 없을 것이다. 개인의 history에 관한 feature는 test에서 처음 보는 사람에게는 좋지 않은 feature다\n",
+    "    - train/test가 id based split했는데 random split을 하게되면 overfit 발생 \n",
+    "    \n",
+    "\n",
+    "**잘 이해가안됨...**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
