--- a/wk2 - Validation.ipynb
+++ b/wk2 - Validation.ipynb
@@ -201,17 +201,50 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Problems occurring during validation\n",
+    "\n",
+    "- validation 때 나타나는 문제\n",
+    "    - 보통 데이터의 모순 때문에 발생\n",
+    "        - 예시 : fold마다 optimal parameter가 다르게 나옴\n",
+    "        - 이 경우 validation을 더 철저하게 해야함\n",
+    "    \n",
+    "- submission 때 나타나는 문제\n",
+    "    - validation score랑 leaderboard score가 안맞는 경우\n",
+    "    - train / test split을 제대로 따라하지 못했기 때문에 발생."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### validation 때 나타나는 문제\n",
+    "\n",
+    "*2월의 매출을 예측하는 문제가 있다. 그럼 train으로 전년도 몇달을 할거고, validation으로 1월을 하겠지. 근데 1월은 2월보다 휴일이 많기 때문에 매출이 더 나옴(선물세트). validation score는 안좋게, test score는 좋게 나올거임.이렇게 이유가 확실한 케이스 말고 다른 케이스는 뭐 있는지 보자*\n",
+    "\n",
+    "- **너무 적은 데이터**\n",
+    "    - 데이터에 많은 패턴과 트렌드가 있을 때, 얘네를 geralize 할만큼 충분한 데이터가 없다. -> fold마다 각각 다른 패턴을 학습. 다른 score 야기.\n",
+    "\n",
+    "- **너무 일관적이지 않은 데이터**\n",
+    "    - target값은 차이가 큰데, 설명변수들의 값이 비슷할 때, 모델은 혼란스러워한다.\n",
+    "        - 그 중 어떤건 train에 어떤건 validation에 있을 때. 에러가 커짐\n",
+    "        - 모두 다 validation에 있을 때, 에러는 작아짐.\n",
+    "    - 위의 매출 예측 문제와 비슷한 상황.\n",
+    "        - 이 상황이면, 1월로 validate할게 아니라, 그 전년도 꺼로 validate하는게 맞겟지\n",
+    "\n",
+    "*어떻게 대처해야 하는가 : 좀 더 철저한 validation 방식이 필요함*\n",
+    "\n",
+    "- KFold split을 random state로 여러번 한다음에 나온 값들을 평균. -> 더 stable한 결과가 나올 것.\n",
+    "\n",
+    "- 한 KFold split으로는 optimal parameter 정하고, 다른 KFold split으로는 모델의 성능을 보는 방법."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Submission 때 나타나는 문제\n"
+   ]
   },
   {
    "cell_type": "markdown",
