--- a/wk2 - Validation.ipynb
+++ b/wk2 - Validation.ipynb
@@ -195,7 +195,12 @@
     "    - train/test가 id based split했는데 random split을 하게되면 overfit 발생 \n",
     "    \n",
     "\n",
-    "**잘 이해가안됨...**"
+    "- combined \n",
+    "    - 걍 위에것들 다 합친거 ;;\n",
+    "    - 예를 들면 가게들의 id를 random으로 split하고, 가게 내에서는 time based split\n",
+    "   \n",
+    "   \n",
+    "    "
    ]
   },
   {
@@ -243,23 +248,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Submission 때 나타나는 문제\n"
+    "### Submission 때 나타나는 문제\n",
+    "\n",
+    "- LB score가 validation score보다 일관되게 높다 / 낮다\n",
+    "- LB score가 validation score와 상관관계가 없다.\n",
+    "\n",
+    "최악의 경우 validation score는 오르는데 LB score는 안오름.\n",
+    "\n",
+    "역시나 가장 중요한 것은 train/test split을 흉내내는 것인데, 이게 굉장히 어렵다.\n",
+    "\n",
+    "그래서 competition 에 enter하자마자 submitting을 시작하는 것을 매우 추천한다.\n",
+    "\n",
+    "**이제 submission에서 나타나는 문제의 원인을 찾아보자**\n",
+    "- validation stage에서 관찰할 수 있는 원인\n",
+    "    - **Kfold 에서 매우 다른 score가 나온다.**\n",
+    "        - 여기서 LB score를 또다른 validation score처럼 보고 비교해본다.\n",
+    "        - validation score의 평균 표준편차를 구해서 LB score와 비교해본다.\n",
+    "        - 만약 kfold 에서 score가 매우 다르게 나온다면, LB score가 다르게 나오는 건 그닥 놀랄일이 아니다.\n",
+    "        - split을 다시 제대로 만들어라\n",
+    "        \n",
+    "    - **public leaderboard에 데이터가 넘 적다.**\n",
+    "        - 너의 validation을 믿으라.\n",
+    "        \n",
+    "    - **train/test 가 분포가 다를때**\n",
+    "        - 키를 예측하는 문제가 있을 때, train : 여자, test : 남자 => 당연히 score가 안좋겠지.\n",
+    "        - leaderboard probing : \n",
+    "            - train에서 여자의 평균 키를 구한다\n",
+    "            - train에서 남자의 평균 키를 구한다\n",
+    "            - 그리고 이 둘을 submit해본다. 그리고 대충 추정해본다. 어디쯤에 있는지. 그랬더니 뭐 한 15센치 차이 났다.\n",
+    "            - 그러면 prediction에 15를 더해주는거야.\n",
+    "            \n",
+    "            *위의 예제보다 더 자주 발견할 수 있는 경우*\n",
+    "            - train 에 여자가 남자보다 훨 많. test에는 남자가 여자보다 훨 많.\n",
+    "            - train/test split을 따라해라! test에 있는 남자 여자 비율에 맞게 validation도!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### LB shuffle\n",
+    "LB shuffle은 public LB와 private LB 결과가 엄청나게 바뀔 때 발생함.\n",
+    "\n",
+    "원인은\n",
+    "- randomness\n",
+    "    - 모든 참가자의 score가 또이또이할 때.\n",
+    "    - 그래서 대안은 뭔지 모르겟음\n",
+    "- 매우 적은 데이터\n",
+    "    - 전체 데이터가 적거나, private test set이 특히 적거나.\n",
+    "- public/private의 분포가 다를때.\n",
+    "    - 시계열 예측에서 종종발생.\n",
+    "    - public은 4월 private은 5월 이러면.. ㅋ"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 요약"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- validation stage에서 score의 분산이 너무 크다면\n",
+    "    - extensive validation 실시\n",
+    "        - 다른 KFold split들의 score를 평균\n",
+    "        - 한 split으로는 모델 tune, 다른 split으로 score 평가\n",
+    "        \n",
+    "- submission score와 validation score가 잘 안맞을 때\n",
+    "    - public LB에 데이터가 너무 적지는 않은지 확인\n",
+    "    - 우리가 overfit되진 않았는지 확인\n",
+    "    - split전략을 맞게 했는지 확인\n",
+    "    - train/test의 분포가 다른지 확인\n",
+    "    \n",
+    "- LB shuffle\n",
+    "    - Randomness\n",
+    "    - 데이터너무적음\n",
+    "    - public/private이 분포가 다름"
+   ]
   },
   {
    "cell_type": "markdown",
